Fix text align center on wp column block

--- a/theme/src/sass/_blocks.sass
+++ b/theme/src/sass/_blocks.sass
@@ -13,7 +13,8 @@
 
 .wp-block-column
     min-width: 23%
-
+    text-align: center
+    
 
 .wp-block-separator 
     border-color: black
